# mcp-book-library

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
client/: example_usage.py  inspector_guide.md
diagrams/: architecture.mmd  primitives_flow.mmd
host/: config.yaml  run_ollama.py
server/: __init__.py  http_server.py  registry.py  stdio_server.py
server/data/: books.json  reading_list.json
server/prompts/: __init__.py  prompt_templates.py
server/resources/: __init__.py  book_catalog.py  reading_stats.py
server/tools/: __init__.py  library_tools.py
tests/: __init__.py  test_prompts.py  test_resources.py  test_tools.py
